# my-os

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  bare_metal_ai_os_blueprint.md  build.rs  kernel8.img  rust-toolchain.toml  test_boot_sim.py  test_fat32.py  test_linux_launch.py  test_trampoline.py
.cargo/: config.toml
circle_shim/: Makefile  circle_usb_shim.cpp
sdcard/: bcm2711-rpi-4-b.dtb  bcm2711.dtb  config.txt  kernel8.img
src/: boot.rs  emmc.rs  fat32.rs  font.rs  framebuffer.rs  gpio.rs  hv_console.rs  ipc.rs  linker.ld  linux_vm.rs  mailbox.rs  main.rs  uart.rs  usb_hid.rs
